# Catalyst4Sci

./: .gitignore  IMPLEMENTATION_PLAN.md  MEMORY_SYSTEM_DESIGN.md  PRD.md  TECH_ARCHITECTURE.md  pyproject.toml
catalyst/: __init__.py  __main__.py
catalyst/agents/: __init__.py  base.py  codex_cli.py  local_command.py
catalyst/app/: cli.py
catalyst/app/services/: research_service.py  workspace_service.py
catalyst/experiments/: __init__.py  runner.py
catalyst/models/: common.py  delegation.py  enums.py  planning.py  plugin.py  prompt.py  research.py  skill.py  workspace.py
catalyst/orchestrator/: checkpoint_manager.py  context_builder.py  delegation_planner.py  loop_engine.py  next_action_selector.py  prompt_registry.py  state_manager.py  subagent_context_builder.py  subagent_executor.py
catalyst/plugins/: ai4scholar.py  base.py  registry.py
catalyst/prompts/: __init__.py  experiment_planner.md  failure_analyzer.md  loader.py  research_agent_system.md  result_summarizer.md
catalyst/skills/: __init__.py  registry.py
catalyst/skills/experiment-run/: SKILL.md
catalyst/skills/experiment-run/references/: execution-guidelines.md
catalyst/skills/literature-search/: SKILL.md
catalyst/skills/literature-search/references/: search-strategy.md
catalyst/skills/result-compare/: SKILL.md
catalyst/skills/result-compare/references/: comparison-heuristics.md
catalyst/storage/: file_store.py  memory_backend.py  schema.py  sqlite.py
