[project]
name = "catalyst4sci"
version = "0.1.0"
description = "Catalyst4Sci MVP scaffold"
readme = "PRD.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
catalyst = "catalyst.app.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["catalyst*"]
